Swagger added ednpoint verificationToken to documentation
