# routes/api/user.js
@@ -15,7 +15,7 @@ const validateBody = require("../../middlewares/validateBody");
 const { registerSchema, updateUserSchema, signinSchema } = require("../../schemas/userSchema");
 
 router.post("/register", validateBody(registerSchema), register);
-router.get("/verify/:verificationToken", verifyEmail);
+router.patch("/verify/:verificationToken", verifyEmail);
 router.post("/signin", validateBody(signinSchema), signin);
 router.get("/current", auth, currentUser);
 router.get("/logout", auth, logout);
